examples/test/testpolicy9096.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9096
  namespace: namespace313
spec:
  podSelector:
    matchLabels:
      key15: value37
      key20: value26
      key25: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value47
      podSelector:
        matchLabels:
          key36: value31
          key19: value22
